# OTIS

./: README.md  otis_classes.py  pyproject.toml
src/otis/: __init__.py  otis_classes.py  otis_functions.py  otis_utils.py
src/tests/: OTIS_on_jupyter.ipynb
